--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "homepage": "https://github.com/minifast/atom-cursor#readme",
   "dependencies": {
+    "fast-deep-equal": "^2.0.1",
     "immutability-helper": "^2.7.1"
   },
   "devDependencies": {
